--- a/PackageInstallations_Troubleshoots.qmd
+++ b/PackageInstallations_Troubleshoots.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Troubleshoots tips for installing miaverse packages (mia, miaViz, miaSim)"
+title: "Troubleshooting tips for installing miaverse packages"
 output: html_document
 ---
 
@@ -66,10 +66,10 @@ or ~/.bashrc, followed by `source ~/.bash_profile` in your terminal
 	FLIBS =  -L/opt/gfortran/lib/gcc/aarch64-apple-darwin20.0/12.2.0       -L/opt/gfortran/lib -lgfortran -lm -lquadmath
 	```
 *note that the path is depend on your installations site, sometimes it
-is located in ``/usr/local/gfortran/lib` so you have to change
+is located in `/usr/local/gfortran/lib` so you have to change
 `/opt/gfortran/lib` accordingly in the lines above.
 
-After all of those steps, you can followed the installations based on
+After all of those steps, you can follow the installations based on
 Bioconductor page. For example for mia package:
 
 ```
@@ -80,7 +80,7 @@ BiocManager::install("mia")
 ```
 
 If the installations prompt to compile from source, you can answer yes,
-and hopefully it can be succesfuly compiled. Good Luck!
+and hopefully it can be successfully compiled. Good Luck!
 
 Follow-up reading:
 
