Transformation descriptions and references added

--- a/inst/assets/bibliography.bib
+++ b/inst/assets/bibliography.bib
@@ -1,3 +1,79 @@
+
+
+
+
+
+
+@Book{Aitchison1986,
+  author =	 {Aitchison, J},
+  title =	 {The Statistical Analysis of Compositional Data},
+  address =	 {London, UK},
+  publisher =	 {Chapman & Hall},
+  year =	 1986
+}
+
+
+  
+
+
+
+@Article{Keshavan2010,
+  author =	 {Keshavan, RH and Montanari, A and Oh, S},
+  title =	 {Matrix Completion From a Few Entries},
+  journal =	 {IEEE Transactions on Information Theory},
+  volume =	 56,
+  pages =	 {2980--2998},
+  year =	 2010
+}
+
+
+
+
+
+
+@Article{Martino2019,
+  author =	 {Martino, C and Morton, J.T. and Marotz, C.A. and Thompson, L.R. and Tripathi, A and Knight, R and Zengler, K},
+  title =	 {A novel sparse compositional technique reveals microbial perturbations},
+  journal =	 {mSystems},
+  volume =	 4,
+  issue =	 1,
+  doi =		 {},
+  year =	 2019 
+}
+
+@Article{Gloor2017,
+  author =	 {Gloor, GB and Macklaim, JM and Pawlowsky-Glahn, V
+                  and Egozcue, JJ},
+  title =	 {Microbiome Datasets Are Compositional: And This Is
+                  Not Optional},
+  journal =	 {Frontiers in Microbiology},
+  volume =	 8,
+  issue =	 2224,
+  doi =		 {10.3389/fmicb.2017.02224},
+  year =	 2017
+}
+
+
+
+@Article{Karwowska2024,
+  author =	 {Zuzanna Karwowska and Oliver Aasmets and Estonian Biobank Research Team and Tomasz Kosciolek and Elin Org},
+  title =	 {Effects of Data Transformation and Model Selection on Feature Importance in Microbiome Classification Data},
+  journal =	 {bioRxiv},
+  doi =		 {10.1101/2023.09.19.558406v2},
+  year =	 {2024}
+}
+
+@Article{Giliberti2022,
+  author =	 {Giliberti, R and Cavaliere, S and Mauriello, IE and Ercolini, D and Pasolli, E},
+  title =	 {Host phenotype classification from human microbiome data is mainly driven by the presence of microbial taxa.},
+  journal =	 {PLoS Comput Biol.},
+  volume =	 18,
+  number =	 4,
+  pages =	 {e1010066},
+  doi =		 {10.1371/journal.pcbi.1010066},
+  year =	 {2022}
+}
+
 @Manual{serizay2023,
     title = {BiocBook: Write, publish and maintain versioned Quarto books with Bioconductor},
     author = {Jacques Serizay},
