--- a/inst/pages/14_alpha_diversity.qmd
+++ b/inst/pages/14_alpha_diversity.qmd
@@ -121,7 +121,8 @@ library(ggplot2)
 library(patchwork)
 library(ggsignif)
 
-# Subsets the data. Takes only those samples that are from feces, skin, or tongue,
+# Subsets the data. Takes only those samples that are 
+# from feces, skin, or tongue,
 # and creates data frame from the collected data
 df <- as.data.frame(colData(tse)[tse$SampleType %in% 
                  c("Feces", "Skin", "Tongue"), ])
@@ -129,12 +130,14 @@ df <- as.data.frame(colData(tse)[tse$SampleType %in%
 # Changes old levels with new levels
 df$SampleType <- factor(df$SampleType)
 
-# For significance testing, all different combinations are determined
+# For significance testing, all different 
+# combinations are determined
 comb <- split(t(combn(levels(df$SampleType), 2)), 
            seq(nrow(t(combn(levels(df$SampleType), 2)))))
 
 ggplot(df, aes(x = SampleType, y = shannon)) +
-  # Outliers are removed, because otherwise each data point would be plotted twice; 
+  # Outliers are removed, because otherwise each data point 
+  # would be plotted twice; 
   # as an outlier of boxplot and as a point of dotplot.
   geom_boxplot(outlier.shape = NA) + 
   geom_jitter(width = 0.2) + 
@@ -228,7 +231,9 @@ tse <- mia::estimateDivergence(tse,
 A plot comparing all the diversity measures calculated above and stored in `colData` can then be constructed directly.
 
 ```{r plot-all-diversities, fig.width = 6.5}
-plots <- lapply(c("observed", "shannon", "simpson", "relative", "faith", "log_modulo_skewness"),
+plots <- lapply(c("observed", "shannon", 
+                  "simpson", "relative", "faith",
+                  "log_modulo_skewness"),
                 plotColData,
                 object = tse,
                 x = "SampleType",
