--- a/inst/pages/11_taxonomic_information.qmd
+++ b/inst/pages/11_taxonomic_information.qmd
@@ -11,7 +11,7 @@ data("GlobalPatterns", package = "mia")
 tse <- GlobalPatterns
 ```
 
-Taxonomic information is a key part of analyzing microbiome data. Without
+Taxonomic information is a key part of analyzing microbiome data and without
 it, any type of data analysis probably will not make much sense. However,
 the degree of detail of taxonomic information differs depending on the dataset
 and annotation data used.
@@ -25,14 +25,14 @@ and assumes certain key aspects:
 `kingdom`, `phylum`, `class`, `order`, `family`, `genus`, `species` or with
 a capital first letter.
 * the columns must be given in the order shown above
-* a column can be omitted, but the order must remain
+* column can be omited, but the order must remain
 
 In this chapter, we will refer to co-abundant groups as CAGs, which are
 clusters of taxa that co-vary across samples.
 
 ## Assigning taxonomic information.
 
-There are a number of methods to assign taxonomic information. Here you may find
+There are a number of methods to assign taxonomic information. We like to give
 a short introduction about the methods available without ranking one over the 
 other. This has to be your choice based on the result for the individual 
 dataset.
@@ -63,14 +63,13 @@ Since the `rowData` can contain other data, `taxonomyRanks` will return the
 columns `mia` assumes to contain the taxonomic information.
 
 ```{r}
-cat(paste(taxonomyRanks(tse), collapse = "\n"))
+taxonomyRanks(tse)
 ```
 
 This can then be used to subset the `rowData` to columns needed.
 
 ```{r}
-# Show only first lines and columns
-rowData(tse)[, taxonomyRanks(tse)][1:5,1:4]
+rowData(tse)[, taxonomyRanks(tse)]
 ```
 
 `taxonomyRankEmpty` checks for empty values in the given `rank` and returns a 
@@ -95,11 +94,9 @@ this part is omitted, but can be added by setting `with_rank = TRUE`.
 
 ```{r}
 phylum <- !is.na(rowData(tse)$Phylum) &
-    vapply(data.frame(apply(rowData(tse)[, taxonomyRanks(tse)[3:7]], 
-                            1L, is.na)), all, logical(1))
+    vapply(data.frame(apply(rowData(tse)[, taxonomyRanks(tse)[3:7]], 1L, is.na)), all, logical(1))
 head(getTaxonomyLabels(tse[phylum,]))
-head(getTaxonomyLabels(tse[phylum,], 
-                       with_rank = TRUE))
+head(getTaxonomyLabels(tse[phylum,], with_rank = TRUE))
 ```
 
 By default the return value of `getTaxonomyLabels` contains only
@@ -107,8 +104,7 @@ unique elements by passing it through `make.unique`. This step can be
 omitted by setting `make_unique = FALSE`.
 
 ```{r}
-head(getTaxonomyLabels(tse[phylum,], with_rank = TRUE, 
-                       make_unique = FALSE))
+head(getTaxonomyLabels(tse[phylum,], with_rank = TRUE, make_unique = FALSE))
 ```
 
 To apply the loop resolving function `resolveLoop` from the
@@ -148,11 +144,9 @@ changing conditions through these levels. For this `mia` contains the
 is as an alternative experiment.
 
 ```{r}
-tse <- transformAssay(tse, assay.type = "counts", 
-                      method = "relabundance")
-altExp(tse, "Family") <- mergeFeaturesByRank(tse, 
-                                 rank = "Family",
-                               agglomerateTree = TRUE)
+tse <- transformAssay(tse, assay.type = "counts", method = "relabundance")
+altExp(tse, "Family") <- mergeFeaturesByRank(tse, rank = "Family",
+                                           agglomerateTree = TRUE)
 altExp(tse, "Family")
 ```
 
@@ -180,17 +174,15 @@ The number of rare taxa is higher on the species level, which causes the need
 for data agglomeration by prevalence.
 
 ```{r}
-altExp(tse, "Species_byPrevalence") <- 
-  mergeFeaturesByPrevalence(tse, 
-                 rank = "Species", 
-                 other_label = "Other", 
-                 prevalence = 5 / 100, 
-                 detection = 1 / 100, 
-                 as_relative = T)
+altExp(tse, "Species_byPrevalence") <- mergeFeaturesByPrevalence(tse, 
+                                                               rank = "Species", 
+                                                               other_label = "Other", 
+                                                               prevalence = 5 / 100, 
+                                                               detection = 1 / 100, 
+                                                               as_relative = T)
 altExp(tse, "Species_byPrevalence")
 
-assay(altExp(tse, "Species_byPrevalence"), 
-      "relabundance")[88:92, 1:7]
+assay(altExp(tse, "Species_byPrevalence"), "relabundance")[88:92, 1:7]
 ```
 
 ```{r}
@@ -226,28 +218,24 @@ tse <- transformAssay(tse, method = "clr", pseudocount = 1)
 tse <- transformAssay(tse, assay.type = "clr", method = "z", 
                       MARGIN = "features")
 
-# Cluster (with euclidean distance) on the features of the 
-# z assay
+# Cluster (with euclidean distance) on the features of the z assay
 tse <- addCluster(tse,
                assay.type = "z",
                clust.col = "hclustEuclidean",
 	       MARGIN = "features",
-               HclustParam(dist.fun = 
-                             stats::dist, method = "ward.D2"))
+               HclustParam(dist.fun = stats::dist, method = "ward.D2"))
 
 # Declare the Kendall dissimilarity computation function
 kendall_dissimilarity <- function(x) {
     as.dist(1 - cor(t(x), method = "kendall"))
 }
 
-# Cluster (with Kendall dissimilarity) on the features of the 
-# z assay
+# Cluster (with Kendall dissimilarity) on the features of the z assay
 tse <- addCluster(tse,
                assay.type = "z",
                clust.col = "hclustKendall",
        	       MARGIN = "features", 	       
-               HclustParam(dist.fun = kendall_dissimilarity, 
-                           method = "ward.D2"))
+               HclustParam(dist.fun = kendall_dissimilarity, method = "ward.D2"))
 ```
 
 Let us store the resulting cluster indices in the `rowData` column specified 
@@ -289,42 +277,133 @@ tse_merged
 We can note that it worked as planned since there were 5 clusters and there are
 now 5 rows.
 
+
 ## Data transformation {#sec-assay-transform}
 
-Data transformations are common in microbiome analysis. Examples
-include the logarithmic transformation, calculation of relative
-abundances (percentages), and compositionality-aware transformations
-such as the centered log-ratio transformation (clr).
+Data transformations are common in (microbial) ecology [@Legendre2001]
+and used to improve compatibility with assumptions related to specific
+statistical methods, mitigate biases, enhance the comparability of
+samples or features, or to obtain more interpretable values.
 
-In mia package, transformations are applied to abundance data. The transformed 
-abundance table is stored back to 'assays'. mia includes transformation 
-function ('transformAssay()') which applies sample-wise or column-wise 
-transformation when MARGIN = 'samples', feature-wise or row-wise transformation 
-when MARGIN = 'features'.
+Examples include the logarithmic transformation, calculation of
+relative abundances (percentages), and compositionality-aware
+transformations such as the centered log-ratio transformation (clr).
 
-For a complete list of available transformations and parameters, see function 
+Let us summarize some commonly used transformations in microbiome data
+science; further details and benchmarkings available in the
+references.
+
+ * 'relabundance' relative transformation; also known as total sum
+   scaling (TSS) and compositional transformation. This converts
+   counts into percentages (at the scale [0, 1]) that sum up to
+   1. Much of the currently available taxonomic abundance data from
+   high-throughput assays (16S, metagenomic sequencing) is
+   compositional by nature, even if the data is provided as counts
+   [@Gloor2017].
+ 
+ * 'clr' Centered log ratio transformation [@Aitchison1986] is used to
+   reduce data skewness and compositionality bias in relative
+   abundances, while bringing the data to the logarithmic scale. This
+   transformation is frequently applied in microbial ecology
+   [@Gloor2017]. However, this transformation only applies to positive
+   values. Usual solution is to add pseudocount, which adds another
+   type of bias in the data. The robust clr transformation ('rclr')
+   aims to circumvent the need to add a pseudocount. While the
+   resulting values from these transformations are difficult interpret
+   directly, this transformation may enhance comparability of relative
+   differences between samples. It is part of a broader Aitchison
+   family of transformations; the additive log ratio transformation
+   (`alr') is also available. The robust clr ("rclr") is similar to
+   regular clr (see above) but allows data with zeroes and avoids the
+   need to add pseudocount [@Keshavan2010, @Martino2019].
+
+  * 'pa' presence/absence transformation ignores abundances and only
+   indicates whether the given feature is detected above the given
+   threshold (default: 0). This simple transformation is relatively
+   widely used in ecological research. It has shown good performance
+   in microbiome-based classification performance [@Giliberti2022,
+   Karwowska2024].
+
+ * 'z' Z transformation scales data to zero mean and unit variance;
+   this us used to bring features (or samples) to more comparable
+   levels in terms of mean and scale of the values. This can enhance
+   visualization and interpretation of the data
+
+* 'log', 'log2', 'log10' Logarithmic transformations; used e.g. to
+   reduce data skewness; with compositional data the `clr` (or `rclr`)
+   transformation is often preferred.
+   
+ * 'hellinger' Hellinger transformation equals to the square root of
+   relative abundances. This ecological transformation can be useful
+   if we are interested in changes in relative abundances.
+
+ * 'rank' Rank transformation replaces each value by its rank. Also
+   see 'rrank' (relative rank transformation). This has use for
+   instance in non-parametric statistics.
+
+ * Other available transformations include Chi square ('chi.square'),
+   Frequency transformation ('frequency'), and Make margin sum of
+   squares equal to one ('normalize')
+
+
+### Transforming the data in practice
+
+Transformations on abundance assays can be performed with
+`mia::transformAssay()`, keeping both the original and the transformed
+assay(s). The transformed abundance assay is then stored back to the
+'assays' slot in the data object. The function applies sample-wise or
+column-wise transformation when MARGIN = 'samples', feature-wise or
+row-wise transformation when MARGIN = 'features'.
+
+A complete list of available transformations and parameters, is
+available in the function
 [help](https://microbiome.github.io/mia/reference/transformAssay.html).
 
+
 ```{r}
-tse <- tseGlobalPatterns
-tse <- transformAssay(tse, assay.type = "counts", 
-                      method = "relabundance", pseudocount = 1)
-tse <- transformAssay(x = tse, assay.type = "relabundance", 
-                      method = "clr", 
+# Load example data
+library(mia)
+data("GlobalPatterns", package = "mia")
+tse <- GlobalPatterns
+
+# Transform "counts" assay to relative abundances ("relabundance"), with pseudocount 1 
+tse <- transformAssay(tse, assay.type = "counts", method = "relabundance", pseudocount = 1)
+
+# Transform relative abundance assay ("relabundance") to "clr", using pseudocount if necessary;
+# name the resulting assay to "clr" 
+tse <- transformAssay(x = tse, assay.type = "relabundance", method = "clr", 
                       pseudocount = TRUE, name = "clr")
 
+```
+
+
+Get the values in the resulting assay, and view some of the first
+entries of it with the `head` command.
+
+```{r}
 head(assay(tse, "clr"))
 ```
 
--   In 'pa' transformation, abundance table is converted to present/absent table.
+
+In 'pa' transformation, abundance table is converted to
+presence/absence table that ignores abundances and only indicates
+whether the given feature is detected. This simple transformation is
+relatively widely used in ecological research. It has shown good
+performance in microbiome-based classification performance
+[@Giliberti2022, Karwowska2024].
+
 
 ```{r}
+# Here, `assay.type` is not explicitly specified.
+# Then The function uses the "counts" assay for the transformation.
 tse <- transformAssay(tse, method = "pa")
-
 head(assay(tse, "pa"))
 ```
 
+You can now view the entire list of abundance assays in your data object with:
+
 ```{r}
-# list of abundance tables that assays slot contains
 assays(tse)
 ```
+
+
