change splitByRanks to agglomerateByRanks

--- a/inst/pages/10_manipulation.qmd
+++ b/inst/pages/10_manipulation.qmd
@@ -290,14 +290,15 @@ tse_genus_sub
 
 ### Splitting
 
-You can split the data based on variables by using the functions `splitByRanks` 
-and `splitOn`.
+You can split the data based on variables by using the functions 
+`agglomerateByRanks` and `splitOn`.
 
-`splitByRanks` splits the data based on taxonomic ranks. Since the elements of the output list
-share columns, they can be stored into `altExp`. 
+`agglomerateByRanks` splits the data based on taxonomic ranks. Since the 
+elements of the output list share columns, they can be stored into `altExp` by
+setting `as.list = FALSE`.
 
-```{r splitbyRanks}
-altExps(tse) <- splitByRanks(tse)
+```{r agglomerateByRanks}
+tse <- agglomerateByRanks(tse)
 altExps(tse)
 ```
 
