--- a/inst/pages/12_quality_control.qmd
+++ b/inst/pages/12_quality_control.qmd
@@ -168,7 +168,7 @@ The prevalence can also be visualized on the taxonomic tree with the
 `miaViz` package.
 
 ```{r}
-altExps(tse) <- splitByRanks(tse)
+tse <- agglomerateByRanks(tse)
 altExps(tse) <-
    lapply(altExps(tse),
           function(y){
