--- a/inst/pages/98_exercises.qmd
+++ b/inst/pages/98_exercises.qmd
@@ -455,7 +455,8 @@ Useful functions: nrow, ncol, dim, summary, table, quantile, unique, transformAs
 2. Check the taxonomic ranks of the features with `taxonomyRanks`. What is the
    deepest taxonomic rank available?  
 3. Agglomerate the TreeSE to each taxonomic rank and store the resulting
-   experiments as altExps. This can be performed automatically with `splitByRanks`.  
+   experiments as altExps. This can be performed automatically with 
+   `agglomerateByRanks`.  
 4. Check the names of the generated altExps with `altExpNames` and retrieve a
    complete list with `altExps`.  
 5. Retrieve the data agglomerated by genus from the corresponding `altExp`.
