--- a/inst/pages/14_alpha_diversity.qmd
+++ b/inst/pages/14_alpha_diversity.qmd
@@ -140,7 +140,7 @@ ggplot(df, aes(x = SampleType, y = shannon)) +
   geom_boxplot(outlier.shape = NA) + 
   geom_jitter(width = 0.2) + 
   geom_signif(comparisons = comb, map_signif_level = FALSE,
-              correction="holm") + #corrects the p-values
+              correction="fdr") + #corrects the p-values
   theme(text = element_text(size = 10))
 ```
 
