added p-value correction for geom_signif (#418)
* added p-value correction for geom_signif

* Update 14_alpha_diversity.qmd

Changed 'holm' to 'fdr'

--- a/inst/pages/14_alpha_diversity.qmd
+++ b/inst/pages/14_alpha_diversity.qmd
@@ -134,11 +134,13 @@ comb <- split(t(combn(levels(df$SampleType), 2)),
            seq(nrow(t(combn(levels(df$SampleType), 2)))))
 
 ggplot(df, aes(x = SampleType, y = shannon)) +
-  # Outliers are removed, because otherwise each data point would be plotted twice; 
+  # Outliers are removed, because otherwise each 
+  # data point would be plotted twice; 
   # as an outlier of boxplot and as a point of dotplot.
   geom_boxplot(outlier.shape = NA) + 
   geom_jitter(width = 0.2) + 
-  geom_signif(comparisons = comb, map_signif_level = FALSE) +
+  geom_signif(comparisons = comb, map_signif_level = FALSE,
+              correction="fdr") + #corrects the p-values
   theme(text = element_text(size = 10))
 ```
 
