rename subsetByPrevalent* and subsetByRare*

--- a/inst/pages/98_exercises.qmd
+++ b/inst/pages/98_exercises.qmd
@@ -398,7 +398,7 @@ Useful functions: nrow, ncol, dim, summary, table, quantile, unique, addPerCellQ
 3. Report the thresholds and the dimensionality of the data before and after subsetting  
 4. Visualize prevalence  
 
-Useful functions: getPrevalence, getPrevalentFeatures, subsetByPrevalentFeatures
+Useful functions: getPrevalence, getPrevalentFeatures, subsetByPrevalent
 
 
 ### Data exploration
@@ -695,7 +695,7 @@ tse <- peerj13075
 ```
 
 2. Agglomerate the TreeSE by genus and filter by a prevalence of 10%. You can
-   perform both operations in one go with `subsetByPrevalentFeatures` by specifying
+   perform both operations in one go with `subsetByPrevalent` by specifying
    the `rank` and `prevalence` arguments.
 
 ```{r}
@@ -704,7 +704,7 @@ tse <- peerj13075
 #| code-fold: true
 #| code-summary: "Show solution"
 
-tse <- subsetByPrevalentFeatures(tse,
+tse <- subsetByPrevalent(tse,
                                  rank = "genus",
                                  prevalence = 0.1)
 ```
@@ -777,7 +777,7 @@ tse <- peerj13075
 ```
 
 2. Agglomerate the TreeSE by genus and filter by a prevalence of 10%. You can
-   perform both operations in one go with `subsetByPrevalentFeatures` by specifying
+   perform both operations in one go with `subsetByPrevalent` by specifying
    the `rank` and `prevalence` arguments.
 
 ```{r}
@@ -786,7 +786,7 @@ tse <- peerj13075
 #| code-fold: true
 #| code-summary: "Show solution"
 
-tse <- subsetByPrevalentFeatures(tse,
+tse <- subsetByPrevalent(tse,
                                  rank = "genus",
                                  prevalence = 0.1)
 ```
@@ -861,7 +861,7 @@ tse <- peerj13075
 ```
 
 2. Agglomerate the TreeSE by genus and filter by a prevalence of 10%. You can
-   perform both operations in one go with `subsetByPrevalentFeatures` by specifying
+   perform both operations in one go with `subsetByPrevalent` by specifying
    the `rank` and `prevalence` arguments.
 
 ```{r}
@@ -870,9 +870,9 @@ tse <- peerj13075
 #| code-fold: true
 #| code-summary: "Show solution"
 
-tse <- subsetByPrevalentFeatures(tse,
-                                 rank = "genus",
-                                 prevalence = 0.1)
+tse <- subsetByPrevalent(tse,
+                            rank = "genus",
+                            prevalence = 0.1)
 ```
 
 3. Model the counts assay of the TreeSE with `ZicoSeq` as the `feature.dat`
@@ -942,7 +942,7 @@ Useful functions: [], ggplot2::geom_boxplot, ggplot2::geom_jitter, wilcox.test, 
 5. Choose statistically significant taxa and visualize their abundances with boxplot & jitterplot.
 
 
-Useful functions: wilcox.test, kruskal.test, ggplot, pheatmap, ComplexHeatMap::Heatmap, ancombc, aldex2, maaslin2, mergeFeaturesByRank, transformAssay, subsetByPrevalentFeatures
+Useful functions: wilcox.test, kruskal.test, ggplot, pheatmap, ComplexHeatMap::Heatmap, ancombc, aldex2, maaslin2, mergeFeaturesByRank, transformAssay, subsetByPrevalent
 
 
 ## Visualization
