--- a/inst/pages/24_biclustering.Rmd
+++ b/inst/pages/24_biclustering.Rmd
@@ -42,7 +42,7 @@ Only the most prevalent taxa are included in analysis.
 
 ```{r cobiclust_1}
 # Subset data in the first experiment
-mae[[1]] <- subsetByPrevalentFeatures(mae[[1]], rank = "Genus", prevalence = 0.2, detection = 0.001)
+mae[[1]] <- subsetByPrevalent(mae[[1]], rank = "Genus", prevalence = 0.2, detection = 0.001)
 # clr-transform in the first experiment
 mae[[1]] <- transformAssay(mae[[1]], method = "relabundance")
 mae[[1]] <- transformAssay(mae[[1]], "relabundance", method = "rclr")
