--- a/inst/pages/24_clustering.qmd
+++ b/inst/pages/24_clustering.qmd
@@ -363,7 +363,7 @@ Only the most prevalent taxa are included in analysis.
 
 ```{r cobiclust_1}
 # Subset data in the first experiment
-mae[[1]] <- subsetByPrevalentFeatures(mae[[1]], rank = "Genus", 
+mae[[1]] <- subsetByPrevalent(mae[[1]], rank = "Genus", 
                                       prevalence = 0.2, 
                                       detection = 0.001)
 
