--- a/inst/pages/60_network_learning.qmd
+++ b/inst/pages/60_network_learning.qmd
@@ -120,10 +120,10 @@ tse <- transformAssay(tse,
                       MARGIN = "samples") 
 
 # Filter by prevalence
-tse <- subsetByPrevalentFeatures(tse,
-                                 prevalence = 0.2,
-                                 detection = 0,
-                                 assay.type = "relabundance")
+tse <- subsetByPrevalent(tse,
+                            prevalence = 0.2,
+                            detection = 0,
+                            assay.type = "relabundance")
 
 # Add log10-transformed abundances
 tse <- transformAssay(tse, method = "log10", pseudocount = 1)
